<resources>
    <string name="app_name">Shemesu</string>
    <string name="splash_title">SHEMESU</string>
    <string name="splash_desc">a place for buy and sell any product</string>
    <string name="login_tite">Welcome to Shemesu</string>
    <string name="splash_button">Get Started</string>
    <string name="login_title">LOGIN,</string>
    <string name="login_desc">enter your user name and phone number to get started</string>
    <string name="login_submit">continue</string>
    <string name="verfy_title">Verification</string>
    <string name="verify_button">Verify</string>
    <string name="verift_code">code</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="verify_desc">enter the verification code we sent into your phone number</string>

    <string name="detail_">Description about the product the product sepecification product type product owner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">+25195673829</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Product</string>
    <string name="menu_gallery">Sell product</string>
    <string name="menu_slideshow">Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>