<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_laayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginbyphone.Login_phone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/onbord"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/phone_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onbord">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/login_title"
                    android:textColor="@color/secon"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/login_desc"
                    android:textColor="#DA003049"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/white"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="User Name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                    <EditText
                        android:id="@+id/usersnamer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        style=""
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:focusedByDefault="true"
                        android:gravity="center"
                        android:soundEffectsEnabled="true"
                        app:ccpDialog_backgroundColor="@color/white"
                        app:ccpDialog_fastScroller_bubbleColor="@color/teal_700"
                        app:ccpDialog_fastScroller_handleColor="@color/teal_700"
                        app:ccpDialog_searchEditTextTint="@color/secon"
                        app:ccpDialog_showTitle="false"
                        app:ccpDialog_textColor="@color/secon"
                        app:ccp_showFlag="true"
                        app:ccp_showNameCode="false"
                        app:ccp_showPhoneCode="false"
                        app:ccp_useDummyEmojiForPreview="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5">

                    </com.hbb20.CountryCodePicker>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="Phone number"
                        app:counterEnabled="true"
                        app:counterMaxLength="9">

                        <EditText
                            android:id="@+id/u_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="phone"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                        </EditText>
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/button_continu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="@color/secon"
                    android:clickable="true"
                    android:shadowDx="10"
                    android:shadowDy="10"
                    android:shadowRadius="10"
                    android:text="@string/login_submit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/verify_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/add_produt_photo_style"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onbord">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/verfy_title"
                    android:textColor="@color/secon"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_verified_user_24" />

                <TextView
                    android:id="@+id/verify_text_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="24dp"
                    android:maxLines="4"
                    android:text="@string/verify_desc"
                    android:textColor="#DC003049"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <com.mukesh.OtpView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:clickable="true"
                    android:cursorVisible="true"
                    android:editable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:itemBackground="@color/white"
                    android:textColor="#DC003049"
                    app:OtpCursorColor="@color/secon"
                    app:OtpItemCount="6"
                    app:OtpLineColor="@color/secon"
                    app:OtpViewType="rectangle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/verify_text_desc" />

                <Button
                    android:id="@+id/button_verify"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="24dp"
                    android:clickable="true"
                    android:shadowDx="10"
                    android:shadowDy="10"
                    android:shadowRadius="10"
                    android:text="@string/verify_button"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/otp_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
